<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <ImageButton
            android:id="@+id/close_btn_view_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:tint="#D76A74"
            android:clickable="true"
            android:onClick="onClick"
            android:src="@drawable/ic_action_close"
            tools:ignore="UseAppTint" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/txt_tv_Punts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_punts_congratulations"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/tv_Punts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_null"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/txt_temp_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_punts_left"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/temp_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_punts_title"
            android:textAlignment="center"
            android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/bt_inici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/fragment_punts_goselectexam" />

    </LinearLayout>

    </LinearLayout>

</FrameLayout>